replacing conversions with direct components and events